--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Umesh Shrestha</h1>
     </header>
     <section class="details">
-      <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+        <h1>Introduction</h1>
+        <p>Details here...</p>
+        <h1>Where I'm From</h1>
+        <p>Details here...</p>
+        <h1>What are your favorite hobbies?</h1>
+        <p>Details here...</p>
+        <h1>What's your dream job?</h1>
+        <p>Details here...</p>
+        <h1>Where do you live?</h1>
+        <p>Details here...</p>
+        <h1>Why do you want to be a web developer?</h1>
+        <p>Details here...</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+            <li><a href="http://www.github.com/usernamehere">Github</a></li>
         </ul>
     </footer>
 </body>
