updating our h1 tag with our name

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
         <h1>Introduction</h1>
-        <p>Details here...</p>
+        <p>Student of SMU</p>
         <h1>Where I'm From</h1>
-        <p>Details here...</p>
+        <p>Nepal</p>
         <h1>What are your favorite hobbies?</h1>
-        <p>Details here...</p>
+        <p>Writing code, reading book ect.</code>
+        </p>
         <h1>What's your dream job?</h1>
-        <p>Details here...</p>
+        <p>Software developer</p>
         <h1>Where do you live?</h1>
-        <p>Details here...</p>
+        <p>Dallas</p>
         <h1>Why do you want to be a web developer?</h1>
-        <p>Details here...</p>
+        <p>To change career</p>
     </section>
 
     <footer id="footer">
